--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# &#9660; AntiStrap
-&#9661; Antistrap is a markdown superset made for writing longscroll information websites quickly and without knowledge of design.
+#AntiStrap
+Antistrap is a markdown superset made for writing longscroll information websites quickly and without knowledge of design.
 
 Guess what it's in the middle of heavy dev/restructuring and is totally unusable right now so don't try.
