--- a/index.mkd
+++ b/index.mkd
@@ -119,7 +119,7 @@
 : centered
 : minheight 
 
-	Made with [&#9660; AntiStrap](https://github.com/Adjective-Object/&#9660; AntiStrap)
+	Made with [&#9660; AntiStrap](https://github.com/Adjective-Object/strapstrap)
 
 	Max @ Pennapps 2014
 
